syntax = "proto3";

package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "common/common.proto";
import "query/schema.proto";

service SchemaService {
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);
}

message GetSchemaRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  ai.floedb.floecat.common.SnapshotRef snapshot = 2;
}

message GetSchemaResponse {
  ai.floedb.floecat.query.SchemaDescriptor schema = 1;
}
